RESOLVED FIXED310914
[Android] WPEBufferAndroid: RELEASE_ASSERT(s_eglDestroyImage) fires before EGL_NO_IMAGE guard in wpeBufferAndroidDisposeEGLImageIfNeeded
https://bugs.webkit.org/show_bug.cgi?id=310914
Summary [Android] WPEBufferAndroid: RELEASE_ASSERT(s_eglDestroyImage) fires before EG...
Alejandro G. Castro
Reported 2026-03-27 11:59:32 PDT
wpeBufferAndroidDisposeEGLImageIfNeeded unconditionally asserts that s_eglDestroyImage is non-null before checking whether the buffer actually has an EGL image to destroy. This causes a crash whenever a WPEBufferAndroid is disposed in a context where import_to_egl_image was never called, for example, when the Android platform backend composites via ASurfaceTransaction and never needs the EGL image path.
Attachments
Alejandro G. Castro
Comment 1 2026-03-27 12:03:13 PDT
EWS
Comment 2 2026-03-27 13:23:44 PDT
Committed 310103@main (ec80755105bc): <https://commits.webkit.org/310103@main> Reviewed commits have been landed. Closing PR #61513 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-27 13:24:13 PDT
Note You need to log in before you can comment on or make changes to this bug.