[Android] WPEBufferAndroid: RELEASE_ASSERT(s_eglDestroyImage) fires before EGL_NO_IMAGE guard in wpeBufferAndroidDisposeEGLImageIfNeeded https://bugs.webkit.org/show_bug.cgi?id=310914

Reviewed by Adrian Perez de Castro.

wpeBufferAndroidDisposeEGLImageIfNeeded unconditionally asserts that
s_eglDestroyImage is non-null before checking whether the buffer
actually has an EGL image to destroy. This causes a crash whenever a
WPEBufferAndroid is disposed in a context where import_to_egl_image was
never called, for example, when the Android platform backend composites
via ASurfaceTransaction and never needs the EGL image path. This is what
happens now with the WPEPlatform implementation.

* Source/WebKit/WPEPlatform/wpe/WPEBufferAndroid.cpp:
(wpeBufferAndroidDisposeEGLImageIfNeeded):

Canonical link: https://commits.webkit.org/310103@main