Source/WebKit/WPEPlatform/wpe/WPEBufferAndroid.cpp
@@ -63,11 +63,11 @@ static EGLImage createImageKHRImageBase(EGLDisplay display, EGLClientBuffer clie
 
 static void wpeBufferAndroidDisposeEGLImageIfNeeded(WPEBufferAndroid* androidBuffer)
 {
-    RELEASE_ASSERT(s_eglDestroyImage);
-
     auto* priv = androidBuffer->priv;
     if (priv->eglImage == EGL_NO_IMAGE)
         return;
+
+    RELEASE_ASSERT(s_eglDestroyImage);
 
     auto* eglImage = std::exchange(priv->eglImage, EGL_NO_IMAGE);
     auto* display = wpe_buffer_get_display(WPE_BUFFER(androidBuffer));
